--- a/toolargetool/build.gradle
+++ b/toolargetool/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.assertj:assertj-core:3.10.0'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC1"
     testImplementation "org.robolectric:robolectric:4.0-alpha-2"
     testImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
