--- a/toolargetool/build.gradle
+++ b/toolargetool/build.gradle
@@ -33,56 +33,64 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
 }
 
-//FIXME this process does not work on gradle plugin3+
-//android.libraryVariants.all { variant ->
-//    task("assemble${variant.name.capitalize()}Sources", type: Jar) {
-//        classifier = 'sources'
-//        variant.javaCompile.source
-//    }
-//    project.artifacts.add("archives", tasks["assemble${variant.name.capitalize()}Sources"])
-//}
-//
-//android.libraryVariants.all { variant ->
-//    task("generate${variant.name.capitalize()}Javadoc", type: Javadoc, dependsOn: "assemble${variant.name.capitalize()}") {
-//        source = variant.javaCompile.source
-//        title = 'TooLargeTool'
-//
-//        options {
-//            links "http://docs.oracle.com/javase/7/docs/api/"
-//            linksOffline "http://d.android.com/reference","${android.sdkDirectory}/docs/reference"
-//        }
-//
-//        classpath += files(variant.javaCompile.classpath.files)
-//        classpath += files(project.android.getBootClasspath())
-//
-//        exclude '**/BuildConfig.java'
-//        exclude '**/R.java'
-//    }
-//}
-//
-//android.libraryVariants.all { variant ->
-//    task("assemble${variant.name.capitalize()}Javadoc", type: Jar, dependsOn: "generate${variant.name.capitalize()}Javadoc") {
-//        classifier = 'javadoc'
-//        from tasks["generate${variant.name.capitalize()}Javadoc"].destinationDir
-//    }
-//    project.artifacts.add("archives", tasks["assemble${variant.name.capitalize()}Javadoc"])
-//}
+android.libraryVariants.all { variant ->
+    task("assemble${variant.name.capitalize()}Sources", type: Jar) {
+        classifier = 'sources'
+        variant.javaCompile.source
+    }
+    project.artifacts.add("archives", tasks["assemble${variant.name.capitalize()}Sources"])
+}
 
-group = 'com.gu.android'
-version = '0.1.3'
+android.libraryVariants.all { variant ->
+    task("generate${variant.name.capitalize()}Javadoc", type: Javadoc, dependsOn: "assemble${variant.name.capitalize()}") {
+        source = variant.javaCompile.source
+        title = 'TooLargeTool'
+
+        options {
+            links "http://docs.oracle.com/javase/7/docs/api/"
+            linksOffline "http://d.android.com/reference","${android.sdkDirectory}/docs/reference"
+        }
+        doFirst {
+            classpath += files(variant.javaCompiler.classpath.files)
+            classpath += files(project.android.getBootClasspath())
+        }
+
+        exclude '**/BuildConfig.java'
+        exclude '**/R.java'
+    }
+}
+
+android.libraryVariants.all { variant ->
+    task("assemble${variant.name.capitalize()}Javadoc", type: Jar, dependsOn: "generate${variant.name.capitalize()}Javadoc") {
+        classifier = 'javadoc'
+        from tasks["generate${variant.name.capitalize()}Javadoc"].destinationDir
+    }
+    project.artifacts.add("archives", tasks["assemble${variant.name.capitalize()}Javadoc"])
+}
+
+
+def versionMajor = 1
+def versionMinor = 0
+def versionPatch = 0
+
+group = 'com.ymnd.android'
+version "${versionMajor}.${versionMinor}.${versionPatch}"
+
+def githubUrl = 'https://github.com/ymnder/toolargetool'
+def libraryName = 'toolargetool'
 
 install {
     repositories.mavenInstaller {
         pom.project {
-            name 'toolargetool'
+            name project.group + '.' + libraryName
             description 'A tool for debugging TransactionTooLargeException on Android'
-            url 'https://github.com/guardian/toolargetool'
-            inceptionYear '2017'
+            url githubUrl
+            inceptionYear '2018'
 
             packaging 'aar'
-            groupId 'com.gu.android'
-            artifactId 'toolargetool'
-            version '0.1.3'
+            groupId project.group
+            artifactId libraryName
+            version version
 
             licenses {
                 license {
@@ -90,15 +98,17 @@ install {
                     url 'https://opensource.org/licenses/MIT'
                 }
             }
+
             scm {
-                connection 'https://github.com/guardian/toolargetool.git'
-                url 'https://github.com/guardian/toolargetool'
+                connection githubUrl + '.git'
+                url githubUrl
 
             }
+
             developers {
                 developer {
-                    id = 'maxspencer'
-                    name 'Max Spencer'
+                    id = 'ymnd'
+                    name 'ymnd'
                 }
             }
         }
@@ -114,18 +124,22 @@ bintray {
     user = bintrayProperties.getProperty('user')
     key = bintrayProperties.getProperty('key')
     configurations = ['archives']
+
     pkg {
-        repo = 'android'
-        name = 'toolargetool'
-        userOrg = 'guardian'
+        repo = libraryName
+        name = libraryName
         licenses = ['MIT']
-        vcsUrl = 'https://github.com/guardian/toolargetool.git'
+        websiteUrl = githubUrl
+        issueTrackerUrl = githubUrl + '/blob/master/LICENSE'
+        vcsUrl = githubUrl + '.git'
+        issueTrackerUrl = githubUrl + '/issues'
+        publicDownloadNumbers = true
         publish = true
         version {
-            name = '0.1.3'
-            desc = 'toolargetool version 0.1.3'
+            name = version
+            desc = 'toolargetool version ' + version
             released = new Date()
-            vcsTag = 'v0.1.3'
+            vcsTag = 'v' + version
         }
     }
 }
